--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   
   <head>
     <title>Math Tutoring</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" type=“text/css” href="main.css">
   </head>
   
 
