--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Math Tutoring</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <h2>Welcome to my math tutoring website for information</h2>
