--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <title>Math Tutoring</title>
     <link rel="stylesheet" href="main.css">
   </head>
+
   <body>
+    <header>
+      <div class="head1">
+        NeroMathTutoring
+      </div>
+    </header>
+    <nav class="menu">
+      <a href="index.html">HOME</a>
+    </nav>
     <h2>Welcome to my math tutoring website for information</h2>
     <p>Hello everyone</p>
   </body>
