--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <nav class="menu">
       <a href="index.html">HOME</a>
     </nav>
-    <h2>Welcome to my math tutoring website for information</h2>
-    <p>Hello everyone</p>
+    <div class="head2">
+      <h2>Welcome to my math tutoring website for information</h2>
+      <p>Hello everyone</p>i
+    </div>
   </body>
 </html>
