--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <div class="head1">
-        NeroMathTutoring
+        <h2>NeroMathTutoring</h2>
       </div>
     </header>
     <nav class="menu">
@@ -16,7 +16,7 @@
     </nav>
     <div class="head2">
       <h2>Welcome to my math tutoring website for information</h2>
-      <p>Hello everyone</p>i
+      <p>Hello everyone</p>
     </div>
   </body>
 </html>
