--- a/geometry.html
+++ b/geometry.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Math Tutoring</title>
+    <title>Nero Math Tutoring | Geometry</title>
     <link rel="stylesheet" href="main.css">
   </head>
 
   <body>
     <header>
       <div class="head1">
-        <h1>Nero Math Tutoring</h1>
+        <h1>Nero Math Tutoring | Geometry</h1>
       </div>
     </header>
     <nav class="menu">
@@ -16,8 +16,8 @@
       <a href="geometry.html">Geometry</a>
     </nav>
     <div class="head2">
-      <h2>Welcome to my math tutoring website for information</h2>
-      <p>Hello everyone</p>
+      <h2>Geometry Notes, Explanations, and Homework Assignments</h2>
+      <p>No homework has been assigned yet</p>
     </div>
   </body>
 </html>
