--- a/geometry.html
+++ b/geometry.html
@@ -12,7 +12,7 @@
       </div>
     </header>
     <nav class="menu">
-      <a href="index.html">HOME</a>
+      <a href="index.html">Home</a>
       <a href="geometry.html">Geometry</a>
     </nav>
     <div class="head2">
