--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Math Tutoring</title>
+    <title>Nero Math Tutoring</title>
     <link rel="stylesheet" href="main.css">
   </head>
 
@@ -12,12 +12,11 @@
       </div>
     </header>
     <nav class="menu">
-      <a href="index.html">HOME</a>
+      <a href="index.html">Home</a>
       <a href="geometry.html">Geometry</a>
     </nav>
     <div class="head2">
-      <h2>Welcome to my math tutoring website for information</h2>
-      <p>Hello everyone</p>
+      <h2>Welcome to my math tutoring website for information!</h2>
     </div>
   </body>
 </html>
