--- a/geometry.html
+++ b/geometry.html
@@ -14,6 +14,7 @@
     <nav class="menu">
       <a href="index.html">Home</a>
       <a href="geometry.html">Geometry</a>
+      <a href="about.html">About</a>
     </nav>
     <div class="head2">
       <h2>Geometry Notes, Explanations, and Homework Assignments</h2>
