--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav class="menu">
       <a href="index.html">Home</a>
       <a href="geometry.html">Geometry</a>
+      <a href="about.html">About</a>
     </nav>
     <div class="head2">
       <h2>Welcome to my math tutoring website for information!</h2>
