--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
       <p>Has studied Calculus I, II, and III to the collegiate level</p>
       <p>Has studied Linear Algebra, Differential Equations, and Discrete Mathematics</p>
       <h2>General Information</h2>
-      <p class="right-align">I have always thought that mathematics could and should be accessible to anybody, and that anyone can have success if they put in the time and care. I started this tutoring business, in part, because I want to help make that vision a reality. Thank you too all my clients, who also have decided to take a chance on that vision, and if you are just browsing, I hope you consider taking part in it!</p>
-      <p>-Best regards</p>
-      <p>Jack Nero</p>
+      <p class="left-align">I have always thought that mathematics could and should be accessible to anybody, and that anyone can have success if they put in the time and care. I started this tutoring business, in part, because I want to help make that vision a reality. Thank you too all my clients, who also have decided to take a chance on that vision, and if you are just browsing, I hope you consider taking part in it!</p>
+      <p class="right-align">-Best regards</p>
+      <p class="right-align">Jack Nero</p>
     </div>
   </body>
 </html>
