--- a/geometry.html
+++ b/geometry.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="head2">
       <h2>Geometry Notes, Explanations, and Homework Assignments</h2>
-      <p>No homework has been assigned yet</p>
+      <a href="Homework1Geometry.pdf" download>Homework 1 (Rigid Transformations)</a>
     </div>
   </body>
 </html>
