--- a/geometry.html
+++ b/geometry.html
@@ -19,6 +19,7 @@
     <div class="head2">
       <h2>Geometry Notes, Explanations, and Homework Assignments</h2>
       <a href="Homework1Geometry.pdf" download>Homework 1 (Rigid Transformations)</a>
+      <p>The above link should have the solutions to the first homework.</p>
     </div>
   </body>
 </html>
