--- a/Homework1Viewer.html
+++ b/Homework1Viewer.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Homework1Geometry</title> 
+  <title>Homework1Geometry</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <h1>Homework1Geometry</h1>
