--- a/geometry.html
+++ b/geometry.html
@@ -20,7 +20,10 @@
       <h2>Geometry Notes, Explanations, and Homework Assignments</h2>
       <a href="Homework1Geometry.pdf" download>Homework 1 (Rigid Transformations)</a>
       <p>The above link should have the solutions to the first homework.</p>
-      <a href="Lesson1Geometry.pdf" download>Homework 1 (Rigid Transformations and Beginning Terminology)</a>
+      <a href="Lesson1Geometry.pdf" download>Lesson 1 (Rigid Transformations and Beginning Terminology)</a>
+      <a href="Lesson2Geometry.pdf" download>Lesson 1 (Rigid Transformations and Beginning Terminology)</a>
+
+
     </div>
   </body>
 </html>
