--- a/geometry.html
+++ b/geometry.html
@@ -21,9 +21,7 @@
       <a href="Homework1Geometry.pdf" download>Homework 1 (Rigid Transformations)</a>
       <p>The above link should have the solutions to the first homework.</p>
       <a href="Lesson1Geometry.pdf" download>Lesson 1 (Rigid Transformations and Beginning Terminology)</a>
-      <a href="Lesson2Geometry.pdf" download>Lesson 1 (Rigid Transformations and Beginning Terminology)</a>
-
-
+      <a href="Lesson2Geometry.pdf" download>Lesson 2</a>
     </div>
   </body>
 </html>
